force-app/main/default/objects/Employee_Leave_Request__c/Employee_Leave_Request__c.object-meta.xml
<CustomObject>
    <label>Employee Leave Request</label>
    <nameField>
        <label>Employee Leave Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Leave Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>