force-app/main/default/objects/Employee_Leave_Request__c/fields/First_Day_Second_Half__c.field-meta.xml
<CustomField>
    <fullName>First_Day_Second_Half__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Day Second Half</label>
    <type>Checkbox</type>
</CustomField>