force-app/main/default/objects/Employee_Leave_Request__c/fields/From_Day__c.field-meta.xml
<CustomField>
    <fullName>From_Day__c</fullName>
    <label>From Day</label>
    <type>Date</type>
</CustomField>