force-app/main/default/objects/Employee_Leave_Request__c/fields/Last_Day_First_Half__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_First_Half__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Day First Half</label>
    <type>Checkbox</type>
</CustomField>