force-app/main/default/objects/Employee_Leave_Request__c/fields/Leave_Full_Day_Or_Half_Day__c.field-meta.xml
<CustomField>
    <fullName>Leave_Full_Day_Or_Half_Day__c</fullName>
    <label>Leave Full Day Or Half Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>First Half</fullName>
            </value>
            <value>
                <fullName>Second Half</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>