force-app/main/default/objects/Employee_Leave_Request__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual Leave</fullName>
            </value>
            <value>
                <fullName>Earned Leave</fullName>
            </value>
            <value>
                <fullName>Comp Offs</fullName>
            </value>
            <value>
                <fullName>Covid Leave</fullName>
            </value>
            <value>
                <fullName>Self Marriage Leave</fullName>
            </value>
            <value>
                <fullName>Unpaid Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>