force-app/main/default/objects/Employee_Leave_Request__c/fields/Number_Of_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Leave_Days__c</fullName>
    <label>Number Of Leave Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>