force-app/main/default/objects/Employee_Leave_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Leave_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>